Changed from 2 key to 1 key on redis ratelimiter